Extend default fallback section of asset index to be an array
- Because it would be convenient to list fallbacks in this way.
- Added tests for another default fallback block

--- a/test/resources/test-asset-loader/resources/fallback-target/fallback-language/assets-index.yaml
+++ b/test/resources/test-asset-loader/resources/fallback-target/fallback-language/assets-index.yaml
@@ -4,8 +4,12 @@ asset_index:
   ondisk:
     redirect_double_fallback_text_from_file: "redirect_double_fallback_text_from_file.txt"
     default_double_fallback_asset_path: "default_double_fallback.txt"
+    another_default_double_fallback_asset_path: "another_default_double_fallback.txt"
   fallbacks:
     default:
-      path_replacement: ["test-course", "test-language"]
-      keys:
-        - "default_cyclic"      
+      - path_replacement: ["test-course", "test-language"]
+        keys:
+          - "default_cyclic"      
+      - path_replacement: ["test-course", "fallback-language"]
+        keys:
+          - "another_default_cyclic"
