--- a/example/resources/en/common-index.yaml
+++ b/example/resources/en/common-index.yaml
@@ -1,8 +1,8 @@
 asset_index:
   fallbacks:
     default:
-      path_replacement:
-        - zh-Hant
-      keys:
-        - imgCorrect
+      - path_replacement:
+          - zh-Hant
+        keys:
+          - imgCorrect
     
