--- a/example/resources/en/course-index.yaml
+++ b/example/resources/en/course-index.yaml
@@ -1,8 +1,8 @@
 asset_index:
   fallbacks:
     default:
-      path_replacement:
-        - "zh-Hant"
-      keys:
-        - demo
-        - fork
+      - path_replacement:
+          - "zh-Hant"
+        keys:
+          - demo
+          - fork
