--- a/example/resources/zh-Hant/render-index.yaml
+++ b/example/resources/zh-Hant/render-index.yaml
@@ -28,4 +28,6 @@ asset_index:
     buttonConfirmText: "確認"
     courseNameLabel: "課程"
     languageLabel: "語言"
+    saveAndCloseLabel: "關閉並儲存"
+    closeLabel: "關閉"
     loadEbusyMessage: "讀取關卡時發生錯誤。請關閉所有受 git 管控而被開啟編輯的檔案後再嘗試一次"
