--- a/example/course-resources/fork/zh-Hant/level-data/intro-install-index.yaml
+++ b/example/course-resources/fork/zh-Hant/level-data/intro-install-index.yaml
@@ -13,7 +13,7 @@ asset_index:
     download: |+2
       .md
       在繼續進行教學之前，請先安裝 fork  
-      fork 的安裝檔可以從它的官方網頁(https<span>://</span>git-fork.com/)下載  
+      fork 的安裝檔可以從它的[官方網頁](https://git-fork.com/)下載  
 
       下載完成後，請按「確認」進行下一步驟
 
