--- a/example/resources/zh-Hant/render-index.yaml
+++ b/example/resources/zh-Hant/render-index.yaml
@@ -30,4 +30,5 @@ asset_index:
     languageLabel: "語言"
     saveAndCloseLabel: "關閉並儲存"
     closeLabel: "關閉"
+    configTitle: "設定"
     loadEbusyMessage: "讀取關卡時發生錯誤。請關閉所有受 git 管控而被開啟編輯的檔案後再嘗試一次"
