Install eslint, choose Standard style

--- a/package.json
+++ b/package.json
@@ -26,6 +26,13 @@
     "electron-mocha": "^8.2.2",
     "electron-packager": "^13.1.1",
     "electron-rebuild": "^1.8.5",
+    "eslint": "^7.22.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-vue": "^7.7.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
@@ -53,6 +60,8 @@
     "etest-core": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "etest-core-debug": "npm run \"load-native-electron\" && electron-mocha --interactive --inspect --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "==== Build =====": "",
+    "lint": "eslint src/**/*.js",
+    "fix-lint": "eslint --fix src/**/*.js",
     "pack": "webpack --config webpack.config.js --mode production",
     "pack-dev": "webpack --config webpack.config.js --mode development",
     "pack-with-externals": "webpack --config webpack.config.js --mode production --env=pack=true",
