lint: auto fix for dev scritps

--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "etest-core": "npm run \"load-native-electron\" && electron-mocha --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "etest-core-debug": "npm run \"load-native-electron\" && electron-mocha --interactive --inspect --renderer --recursive \"./test/tests/*.js\" --grep \"#core\"",
     "==== Build =====": "",
-    "lint": "eslint src/**/*.js",
-    "fix-lint": "eslint --fix src/**/*.js",
+    "lint": "eslint src/**/*.js dev/**/*.js dev/*.js",
+    "fix-lint": "eslint --fix src/**/*.js dev/**/*.js dev/*.js",
     "pack": "webpack --config webpack.config.js --mode production",
     "pack-dev": "webpack --config webpack.config.js --mode development",
     "pack-with-externals": "webpack --config webpack.config.js --mode production --env=pack=true",
