--- a/example/resources/zh-Hant/render-index.yaml
+++ b/example/resources/zh-Hant/render-index.yaml
@@ -1,4 +1,6 @@
 asset_index:
+  ondisk:
+    creditsAndLicenseContent: 'credits_and_license.md'
   infile:
     elaborate: "解說"
     illustrate: "圖解"
@@ -31,4 +33,5 @@ asset_index:
     saveAndCloseLabel: "關閉並儲存"
     closeLabel: "關閉"
     configTitle: "設定"
+    creditsAndLicense: "版權聲明"
     loadEbusyMessage: "讀取關卡時發生錯誤。請關閉所有受 git 管控而被開啟編輯的檔案後再嘗試一次"
