Use environment variable to enable/disable debug functionalities

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/devtools": "^5.3.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "cross-env": "^7.0.3",
     "csp-html-webpack-plugin": "^5.1.0",
     "css-loader": "^5.1.1",
     "electron": "^8.2.5",
@@ -64,7 +65,6 @@
     "fix-lint": "eslint --fix src/**/*.js src/**/*.vue dev/**/*.js dev/*.js test/**/*.js",
     "pack": "webpack --config webpack.config.js --mode production",
     "pack-dev": "webpack --config webpack.config.js --mode development",
-    "pack-with-externals": "webpack --config webpack.config.js --mode production --env=pack=true",
     "bake-fork": "npm run \"load-native-node\" && node ./dev/course-maker.js bake-course ./example \"/\" fork ./test/resources/repo-archive",
     "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --ignore=\"^/\\.module_cache/\" --ignore=\"^/test\" --ignore=\"^/playground\" --ignore=\"^/bake\" --ignore=\"^/drawings\" --ignore\"^/dev\" --ignore=\"^/lib\" --ignore\"^/src\" --out=\"out\"",
     "build-win64-dev": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --prune=false",
@@ -72,7 +72,7 @@
     "load-native-node": "node \"./dev/module-switch.js\" load nodegit node",
     "load-native-electron": "node \"./dev/module-switch.js\" load nodegit electron",
     "raw": "mocha --recursive \"./test/tests/*.js\"",
-    "test-pack": "npm run \"load-native-electron\" && npm run pack-dev && electron ./main.js",
+    "test-pack": "npm run \"load-native-electron\" && cross-env DEBUG_ENABLED=true npm run pack-dev && electron ./main.js",
     "test-pack-production": "npm run \"load-native-electron\" && npm run pack && electron ./main.js"
   },
   "author": "zedaizd",
