--- a/example/course-resources/fork/zh-Hant/images-index.yaml
+++ b/example/course-resources/fork/zh-Hant/images-index.yaml
@@ -7,7 +7,7 @@ asset_index:
     fork-folded: fork-folded.png
     fork-choose-open-repository: fork-choose-open-repository.png
     fork-select-repository-location: fork-select-repository-location.png
-    fork-open-basic: fork-open-basic.png
+    open-basic: fork-open-basic.png
 
 # browse-history
     folder-history-change: browse-history@folder-history-change.png
