--- a/example/course-resources/git-extensions/zh-Hant/level-data/intro-open-repository-index.yaml
+++ b/example/course-resources/git-extensions/zh-Hant/level-data/intro-open-repository-index.yaml
@@ -1,4 +1,47 @@
 asset_index:
+  infile:
+    introduce-goal: |+2
+      .md
+      在上一個章節中，我們費勁了心力好不容易才安裝好${{t/gui}}  
+      在這一個章節中，將介紹如何使用${{t/gui}}開啟一個資料夾  
+      在往後的教學中，當提到「使用${{t/gui}}開啟 OOO 資料夾」時，請按照本章節的步驟進行  
+
+    open-directory: |+2
+      .md
+      首先，請開啟已經安裝好的${{t/gui}}  
+      會出現如下圖的畫面  
+      
+      ![illustration]({{images/choose-open-repository}})  
+
+      如上圖所示，在左側工具列選擇紅框圈選的「Open Repository(開啟倉庫)」  
+      就會出現如下圖的路徑選擇視窗：  
+
+      ![illustration]({{images/select-repository-location}})
+
+      為了方便，練習用資料夾已經預先設置好了，請複製以下路徑：  
+
+      `#{{basic}}`  
+
+      然後，貼入上圖紅框圈選的位置後，按下「Open」，就可以開啟資料夾了  
+
+    instruct-verify-open: |+2
+      .md
+      成功開啟之後，${{t/gui}}中應該會出現類似下圖紅框圈選的範圍，這個叫作${{t/graph-f}}
+
+      ![illustration]({{images/fork-open-basic}})  
+
+      請計算出現在你的${{t/gui}}中的${{t/graph}}上，圓圈的數量，並回答在下方的欄位中  
+    
+    summary: |+2
+      .md
+
+      至此為止，你已經學會  
+      1. 如何開啟${{t/gui}}
+      2. 使用${{t/gui}}開啟 git 專案
+
+      在本章節的最後，我們引出了 git 最重要的一個概念：${{t/graph}}  
+      在接下來的章節中，我們都將圍繞著它進行，逐步的熟悉 git 的概念以及操作方法  
+      
   fallbacks:
     default:
       - path_replacement:
@@ -20,9 +63,3 @@ asset_index:
           - msg-4
           - msg-5
           - msg-6
-          - introduce-goal
-          - open
-          - folded
-          - open-directory-in-fork
-          - instruct-verify-open
-          - summary
